various fixes suggested by findbugs